--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         margin: 0;
         padding: 0;
         font-family: "Emilys Candy";
-        background: #80ffdf;
+        /* background: #80ffdf; */
+        background: white;
       }
     </style>
   </head>
