--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         padding: 0;
         font-family: "Emilys Candy";
         /* background: #80ffdf; */
-        background: white;
+        background: #fff9e6;
       }
     </style>
   </head>
