--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         padding: 0;
         font-family: "Emilys Candy";
         /* background: #80ffdf; */
-        background: #fff9e6;
+        /* background: #fff9e6; */
+        background: white;
       }
     </style>
   </head>
